update jump bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ table td {
     height: 50px;
     border-radius: 50%;
     /* background-color: rgb(53, 63, 15); */
+    border-radius: 50%;
     background-color: whitesmoke;
     margin: -25px -25px;
     position: absolute;
@@ -76,6 +77,8 @@ table td {
     /* styling for team 1 king */
     width: 50px;
     height: 50px;
+    border-radius: 40%;
+    background-color: rgb(150, 150, 150);
     margin: -25px -25px;
     position: absolute;
 }
@@ -84,6 +87,8 @@ table td {
     /* styling for team 2 king */
     width: 50px;
     height: 50px;
+    border-radius: 40%;
+    background-color: rgb(255, 227, 66);
     margin: -25px -25px;
     position: absolute;
 }
